Add support for prompt_toolkit 3.0 (asyncio)

--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,6 @@ dependencies:
   - compilers
   - libmfile
   - ipython
-  - prompt_toolkit=2.0.10
+  - prompt_toolkit>=3.0.0
   - traits
   - make
