--- a/.travis.yml
+++ b/.travis.yml
@@ -3,35 +3,35 @@ language: cpp
 
 env:
   #- PYTHON_VERSION=2.7 ROOT_VERSION=6.20.4
-  - PYTHON_VERSION=2.7 ROOT_VERSION=6.20.2
-  - PYTHON_VERSION=2.7 ROOT_VERSION=6.20.0
-  - PYTHON_VERSION=2.7 ROOT_VERSION=6.18.04
-  - PYTHON_VERSION=2.7 ROOT_VERSION=6.18.00
+  #- PYTHON_VERSION=2.7 ROOT_VERSION=6.20.2
+  #- PYTHON_VERSION=2.7 ROOT_VERSION=6.20.0
+  #- PYTHON_VERSION=2.7 ROOT_VERSION=6.18.04
+  #- PYTHON_VERSION=2.7 ROOT_VERSION=6.18.00
 
-  - PYTHON_VERSION=3.6 ROOT_VERSION=6.20.4
-  - PYTHON_VERSION=3.6 ROOT_VERSION=6.20.2
-  - PYTHON_VERSION=3.6 ROOT_VERSION=6.20.0
-  - PYTHON_VERSION=3.6 ROOT_VERSION=6.18.04
-  - PYTHON_VERSION=3.6 ROOT_VERSION=6.18.00
+  #- PYTHON_VERSION=3.6 ROOT_VERSION=6.20.4
+  #- PYTHON_VERSION=3.6 ROOT_VERSION=6.20.2
+  #- PYTHON_VERSION=3.6 ROOT_VERSION=6.20.0
+  #- PYTHON_VERSION=3.6 ROOT_VERSION=6.18.04
+  #- PYTHON_VERSION=3.6 ROOT_VERSION=6.18.00
 
-  - PYTHON_VERSION=3.7 ROOT_VERSION=6.20.4
-  - PYTHON_VERSION=3.7 ROOT_VERSION=6.20.2
-  - PYTHON_VERSION=3.7 ROOT_VERSION=6.20.0
-  - PYTHON_VERSION=3.7 ROOT_VERSION=6.18.04
-  - PYTHON_VERSION=3.7 ROOT_VERSION=6.18.00
+  # - PYTHON_VERSION=3.7 ROOT_VERSION=6.20.4
+  #- PYTHON_VERSION=3.7 ROOT_VERSION=6.20.2
+  #- PYTHON_VERSION=3.7 ROOT_VERSION=6.20.0
+  #- PYTHON_VERSION=3.7 ROOT_VERSION=6.18.04
+  #- PYTHON_VERSION=3.7 ROOT_VERSION=6.18.00
 
   - PYTHON_VERSION=3.8 ROOT_VERSION=6.20.4
-  - PYTHON_VERSION=3.8 ROOT_VERSION=6.20.2
-  - PYTHON_VERSION=3.8 ROOT_VERSION=6.20.0
-  - PYTHON_VERSION=3.8 ROOT_VERSION=6.18.04
+  #- PYTHON_VERSION=3.8 ROOT_VERSION=6.20.2
+  #- PYTHON_VERSION=3.8 ROOT_VERSION=6.20.0
+  #- PYTHON_VERSION=3.8 ROOT_VERSION=6.18.04
   #- PYTHON_VERSION=3.8 ROOT_VERSION=6.18.00
 
   #- ROOT_VERSION=6.16.00
   #- ROOT_VERSION=6.14.06
 
 os:
-  - linux
-  # - osx
+  #- linux
+  - osx
 
 services:
   - xvfb
@@ -50,7 +50,7 @@ install:
   - conda config --add channels conda-forge
   - conda update -q conda
 
-  - conda create -q -n hdtv-environment python=$TRAVIS_PYTHON_VERSION root=$ROOT_VERSION numpy scipy prompt_toolkit matplotlib uncertainties
+  - conda create -q -n hdtv-environment python=$TRAVIS_PYTHON_VERSION root=$ROOT_VERSION numpy scipy prompt_toolkit matplotlib uncertainties xorg-libx11
     docutils conda-build anaconda-client pytest pytest-cov codecov
   - conda activate hdtv-environment
 
